--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "convex": "^1.8.0",
     "lucide-react": "^0.317.0",
     "next": "14.1.0",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.12.1"
   },
   "devDependencies": {
     "@types/node": "^20",
